# SearchAlgoSandbox

./: .gitignore  CMakeLists.txt  README.md
src/08-TSP/gui/: TSPDrawingWidget.cpp  TSPGeneticSolver.cpp  TSPGeneticSolver.h  TSPSolverStatusReporter.h  main.cpp
src/08-TSP/impl/: PredefinedConfigurations.cpp  TSP2OptSolver.cpp
src/gui/: MainWindow.cpp  TSPDrawingWidget.h  TSPGeneticSolver.cpp  TSPGeneticSolver.h  TSPSolverStatusReporter.h  main.cpp
src/impl/: ITSPSolver.h  PredefinedConfigurations.h  TSP.h  TSP2OptSolver.h  _Library.h
tasks/kverhun/: CMakeLists.txt
tasks/kverhun/08-TSP/gui/: MainWindow.cpp  MainWindow.h  TSPGeneticSolver.cpp  TSPSolver.cpp  TSPSolver.h  TSPSolverStatusReporter.cpp  TSPSolverStatusReporter.h  main.cpp
tasks/kverhun/08-TSP/impl/: GeneticAlgo.cpp  GeneticAlgo.h  ITSPSolver.h  PredefinedConfigurations.cpp  PredefinedConfigurations.h  TSP2OptSolver.cpp  TSP2OptSolver.h
